packages/k8s/auth-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
    - protocol: TCP
      port: 60000
      targetPort: 8080
      name: auth-port
  type: NodePort
  selector:
    app: auth
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: auth
          image: gcr.io/peppy-nation-312815/auth
