packages/k8s/client-depl.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-srv
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - protocol: TCP
    port: 60100
    targetPort: 3000
    name: client-port
  type: NodePort
  selector:
    app: client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: gcr.io/peppy-nation-312815/client
