packages/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-resource
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - path: /api/tickets/?(.*)
            pathType: Prefix
            backend:
              serviceName: tickets-srv
              servicePort: 60200
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              serviceName: auth-srv
              servicePort: 60000
          - path: /?(.*)
            pathType: Prefix
            backend:
              serviceName: client-srv
              servicePort: 60100
